- Improved: UI/UX

--- a/app/src/main/res/color/sel_carrier_font_color.xml
+++ b/app/src/main/res/color/sel_carrier_font_color.xml
@@ -2,6 +2,6 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_selected="true" android:color="@color/c1"/>
-    <item android:color="@color/f1"/>
+    <item android:state_selected="true" android:color="@color/f1"/>
+    <item android:color="@color/c1"/>
 </selector>
