--- a/app/src/main/res/drawable/rounded_square_15dp.xml
+++ b/app/src/main/res/drawable/rounded_square_15dp.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/sel_carrier_background_color" />
+    <solid android:color="@color/c1" />
     <corners android:radius="15dp" />
     <stroke android:color="@color/f4"
         android:width="1dp" />
