--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -77,7 +77,7 @@
 
                     <androidx.appcompat.widget.AppCompatTextView
                         style="@style/TextView.MatchWrap"
-                        android:id="@+id/tv_item_name"
+                        android:id="@+id/et_item_name"
                         android:hint="@string/item_name_empty"
                         android:gravity="start"
                         android:text="@{item.trackEntity.itemName}"
@@ -98,12 +98,12 @@
                         android:textColor="@color/f1"
                         android:textIsSelectable="true"
                         android:layout_marginTop="5dp"
-                        app:layout_constraintTop_toBottomOf="@id/tv_item_name"
+                        app:layout_constraintTop_toBottomOf="@id/et_item_name"
                         app:layout_constraintLeft_toLeftOf="parent"/>
 
                     <androidx.appcompat.widget.AppCompatTextView
                         style="@style/TextView"
-                        android:id="@+id/tv_track_id"
+                        android:id="@+id/et_track_id"
                         android:hint="@string/track_id"
                         android:gravity="start"
                         android:text="@{item.trackEntity.trackId}"
@@ -119,9 +119,9 @@
                         android:layout_width="0dp"
                         android:layout_height="1dp"
                         android:background="@color/f1"
-                        app:layout_constraintLeft_toLeftOf="@id/tv_track_id"
-                        app:layout_constraintRight_toRightOf="@id/tv_track_id"
-                        app:layout_constraintTop_toBottomOf="@id/tv_track_id"
+                        app:layout_constraintLeft_toLeftOf="@id/et_track_id"
+                        app:layout_constraintRight_toRightOf="@id/et_track_id"
+                        app:layout_constraintTop_toBottomOf="@id/et_track_id"
                         />
 
                     <androidx.appcompat.widget.AppCompatTextView
