--- a/app/src/main/res/layout/track_detail_fragment.xml
+++ b/app/src/main/res/layout/track_detail_fragment.xml
@@ -25,7 +25,7 @@
 
                 <androidx.appcompat.widget.AppCompatTextView
                     style="@style/TextView"
-                    android:id="@+id/tv_item_name"
+                    android:id="@+id/et_item_name"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:text="@={vm.lvItemName}"
