- added: Todo Lists
(cherry picked from commit f87e162c9196b6afa42b5b0515058421c0a9ee76)

--- a/app/src/main/res/layout/setting_fragment.xml
+++ b/app/src/main/res/layout/setting_fragment.xml
@@ -385,6 +385,9 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+<!--            TODO// 사용 된 오픈 소스 목록 확인 가능한 fragment 추가 -->
+
+<!--            TODO// 깃 허브 원본 소스로 연결 되는 view 추가 -->
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
