--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -126,13 +126,27 @@
 
                     <androidx.appcompat.widget.AppCompatTextView
                         style="@style/TextView"
+                        android:id="@+id/tv_location"
+                        android:hint="@string/now_location_empty"
+                        android:gravity="end"
+                        android:textSize="16sp"
+                        android:textColor="@color/f1"
+                        android:textStyle="bold"
+                        android:layout_marginEnd="6dp"
+                        tools:text="@{item.trackEntity.recentLocation.trim()}"
+                        app:layout_constraintRight_toLeftOf="@+id/tv_status"
+                        app:layout_constraintBottom_toBottomOf="@id/tv_status"
+                        />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        style="@style/TextView"
                         android:id="@+id/tv_status"
                         android:hint="@string/now_status_empty"
                         android:gravity="end"
-                        android:textSize="18sp"
+                        android:textSize="16sp"
                         android:textColor="@color/f1"
                         android:textStyle="bold"
-                        tools:text="@{item.trackEntity.recentStatus}"
+                        tools:text="@{item.trackEntity.recentStatus.trim()}"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintBottom_toTopOf="@id/tv_time"
                         />
