--- a/app/src/main/res/layout/item_progress.xml
+++ b/app/src/main/res/layout/item_progress.xml
@@ -20,7 +20,7 @@
         android:paddingHorizontal="20dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="25dp"
+            android:layout_width="30dp"
             android:layout_height="match_parent"
             android:layout_marginRight="20dp"
             >
@@ -50,13 +50,28 @@
                 app:layout_constraintVertical_weight="1" />
 
             <View
-                android:layout_width="match_parent"
+                android:id="@+id/v_marker"
+                android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:background="@drawable/marker_timeline"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
+                />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/iv_truck"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:tint="@color/c1"
+                android:src="@drawable/ic_truck"
+                android:background="@color/f1"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:visibility="gone"
                 />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
