--- a/app/src/main/res/layout/item_progress_loading.xml
+++ b/app/src/main/res/layout/item_progress_loading.xml
@@ -16,21 +16,22 @@
         android:orientation="vertical"
         android:gravity="center">
 
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@color/c1"
+            android:id="@+id/progress1" />
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/iv_truck"
-            android:layout_width="65dp"
-            android:layout_height="65dp"
-            android:tint="@color/c1"
-            android:src="@drawable/ic_truck"
-            android:background="@color/f1"
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="15dp"
             />
 
         <androidx.appcompat.widget.AppCompatTextView
             style="@style/TextView"
             android:id="@+id/tv_carrier_name"
             android:gravity="center"
-            android:text="@string/msg_progress_list_empty"
+            android:text="@string/msg_progress_list_loading"
             android:textColor="@color/c1"
             android:textSize="18sp"
             app:layout_constraintTop_toTopOf="parent"
